--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -42,6 +42,10 @@ stages:
         python -m venv antenv
         source antenv/bin/activate
         make install
+      workingDirectory: $(projectRoot)
+      displayName: "Install the environment"
+    
+    - script: |
         make lint
       workingDirectory: $(projectRoot)
       displayName: "Run Lint Tests"
