--- a/.github/workflows/pythonapp.yml
+++ b/.github/workflows/pythonapp.yml
@@ -18,7 +18,7 @@ jobs:
         make install
     - name: Lint with pylint
       run: |
-        make lint
+        make lint-ci
     - name: Test with pytest
       run: |
-        make test
+        make test-ci
